--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -10,10 +10,10 @@
   },
   "FOOTER": {
     "content1": "ต้องการสอบถามข้อมูล",
-    "content2": "ติดต่อผ่ายทะเบียนกองทุนสำรองเลี้ยงชีพ",
+    "content2": "ฝ่ายการตลาด",
     "content3": "บลจ.แลนด์ แอนด์ เฮาส์ จำกัด",
-    "content4": "Tel. 02-286-3484 ต่อ 335 - 336",
-    "content5": "หรือ E-mail : registrar_pvd@lhfund.co.th"
+    "content4": "Tel. 02-286-3484,02-2679-2155",
+    "content5": "หรือ E-mail : marketing@lhfund.co.th"
   },
   "NAVBAR": {
     "dashboard": "หน้ารวม Port",
@@ -49,6 +49,7 @@
     "view-all": "ดูรายการทั้งหมด",
     "address": "ที่อยู่",
     "no-list": "ไม่มีรายการที่รอดำเนินงาน",
+    "effectivedate": "วันที่รายการมีผล",
     "//myport": null,    
     "net-asset-value": "มูลค่าทรัพย์สินสุทธิ (บาท)",
     "profit-loss": "กำไร/ขาดทุน (บาท)",    
@@ -81,9 +82,9 @@
     "sub": "มูลค่าการลงทุน RMF & LTF",
     "sub-r-total": "มูลค่าการลงทุน RMF (บาท)",
     "sub-l-total": "มูลค่าการลงทุน LTF (บาท)",
-    "r-i-cer": "หนังสือรับรองฯ RMF",
+    "r-i-cer": "หนังสือรับรองซื้อหน่วยลงทุน RMF",
     "r-r-cer": "หนังสือรับรองฯ ขายคืน RMF",
-    "l-i-cer": "หนังสือรับรองฯ LTF",
+    "l-i-cer": "หนังสือรับรองซื้อหน่วยลงทุน LTF",
     "l-r-cer": "หนังสือรับรองฯ ขายคืน LTF",
     "year": "ปี",
     "//report": null,
@@ -130,7 +131,7 @@
 
   },
   "TABLE": {
-    "date": "วันที่",
+    "date": "คงเหลือ ณ วันที่",
     "unit-balance": "หน่วยคงเหลือ",
     "nav-unit": "มูลค่าต่อหน่วย"
   },
@@ -165,11 +166,13 @@
     "otp": "ขอรหัส OTP อีกครั้ง",
     "confirm": "ยืนยัน",
     "accept": "ยอมรับ",
+    "notaccept": "ไม่ยอมรับ",
     "print": "พิมพ์",
     "view-list": "ดูรายการ",
     "edit": "แก้ไขข้อมูล",
     "cal": "คำนวณ",
-    "restore": "คืนค่า"
+    "restore": "คืนค่า",
+    "acceptrisk": "ยอมรับความเสี่ยง"
   },
   "abbreviation": {
     "date": "วันที่",
