--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,8 +11,8 @@
     "content1": "If you have further questions",
     "content2": "please contact the Registrar Provident Fund",
     "content3": "LAND AND HOUSES FUND MANAGEMENT CO.,LTD.",
-    "content4": "Tel. 02-286-3484,02-2679-2155",
-    "content5": "Or E-mail : marketing@lhfund.co.th"
+    "content4": "Tel. 02-286-3484",
+    "content5": "Or E-mail : "
   },
   "NAVBAR": {
     "dashboard": "Total port",
@@ -48,15 +48,56 @@
     "view-all": "View all",
     "no-list": "No orders to be processed",    
     "effectivedate": "Effective Date",
+    "select": "Please Select",
+    "select-p": "Please select Province",
+    "select-a": "Please select Umpur",
+    "select-t": "Please select Tumbol",
+    "not-ad-date": "Please leave blank if you do not wish to plan advance purchase date",
+    "place-holder-date": "dd/mm/yyyy",
+    "all-fund": "Show All Fund",
+    "all-unitholder": "Show All Unitholders",
+    "ats": "Not found Bank Account",
+    "duration": "Period time",
+    "SUB ": "SUBSCRIPTION",
+    "RDM": "REDEMPTION",
+    "SWI": "SWITCH IN",
+    "SWO": "SWITCH OUT",
+    "TRI": "TRANSFER IN",
+    "TRO": "TRANSFER OUT",
+    "LHF": "TRANS. VIA LH FUND",
+    "LHF-I": "TRANS. VIA INTERNET LHFUND",
+    "FUNDCONNECT": "TRANS. VIA Fund Connext",
+    "SELLINGAGENT": "TRANS. VIA Selling Agent",
+    "prospectus": "Download prospectus",
+    "be-confirm": "Check the details before confirmed",
+    "be-print": "Print",
+    "example": "Example",
+    "score": "Score",
+    "score-result": "Risk Assessment Result",
+    "texs": "Taxed",
+    "not-texs": "Not taxed",
+    "phone-edit": "Mobile phone number and email That is used to register, cannot be edited from the website. Please contact the marketing officer who takes care of you.",
+    "abbreviation": "Abbreviation",
+    "tran-way": "Transaction channels",
+    "tran-type": "Transaction type",
+    "hed": "Your selected fund have dynamic hedging",
+    "risk-level": "Your investment risk level is less than the risk level of the fund.",
+    "expiremodal": "Your suitability form is expire. Please update suitability form in order to complete your transaction",
+    "warn-order": "Confirmation of this order is not considered to complete transaction. In case of you did not requested the fund book ,The Registrar will send the confirmation note to you when the transaction is completed within 2 business days.",
+    "ats-contact": "To open ATS account, You may inquire more information regarding fund services by contacting LHfund, daily on Mondays to Fridays at 8.30-17.30 Tel: 02-286-3484 or 02-679-2155",
     "//myport": null,   
     "net-asset-value": "Net Asset Value (baht)",
     "profit-loss": "Profit/Loss (baht)",
     "asset-alloction": "Asset Alloction",
     "//transection": null,
+    "payment-method": "Direct Debit",
     "purchase-view-list": "รายการซื้อหน่วยลงทุนทั้งหมด",
     "purchase": "SUBSCRIPTION ORDER",
     "input-date": "Input Date",
     "payment": "Please select a payment",
+    "bath": "Bath",
+    "unit": "Unit",
+    "all": "All",
     "fund-name": "Fund name",
     "amount": "Subscription amount",
     "debit-from-acc": "Debit from account",
@@ -95,6 +136,7 @@
     "select-date-t": "Please select the transaction date your would like to see the transaction.",
     "transaction-date": "Transaction date",
     "//profile": null,
+    "address-edit": "Address",
     "defult-start-page": "Default start up page",
     "current-p": "Current password",
     "new-p": "New Password",
@@ -123,17 +165,73 @@
     "regular-purchase": "REGULAR SUBSCRIPTION PLAN",
     "condition": "Condition",
     "monthly": "Monthly",
-    "day": "Day",
+    "amount2": "Amount",
+    "day": "Date",
     "start-date": "Duration Start Date",
     "end-date": "Duration End Date",
-    "regular-purchase-list": "REGULAR SUBSCRIPTION ORRDER LIST"
+    "regular-purchase-list": "REGULAR SUBSCRIPTION ORRDER LIST",
+    "every-day": "Every Day"
   },
   "TABLE": {
     "//myport": null,
     "date": "Date",
     "unit-balance": "Unit balance",
-    "nav-unit": "NAV/Unit"
+    "nav-unit": "NAV/Unit",
+    "balance-amount": "Balance Amount",
+    "unrealize": "Unrealize(Gain/Loss)",
+    "bath": "(Baht)",
+    "unit": "(Unit)",
+    "unit2": "Unit",
+    "cost": "Cost",
+    "balance": "Balance",
+    "total": "Total",
+    "fund": "Fund Name",
+    "ef-date": "Effective Date",
+    "or-date": "Order Date",
+    "or-date-time": "Order Date and Time",
+    "payment-method": "Payment Method",
+    "first-date": "First Purchase Date",
+    "type": "Type",
+    "transaction": "Transaction",
+    "des-fund": "Destination fund",
+    "xd-date": "XD Date",
+    "ref": "Reference number",
+    "type-in": "Type of investment unit",
+    "invest": "Investment value",
+    "dividend-unit": "Dividend/Unit",
+    "dividend-pay": "Dividend payment",
+    "with-taxes": "withholding taxes",
+    "with-taxes-a": "withholding taxes amount",
+    "net-dividend": "Net Dividend ",
+    "dividend-date": "Dividend payment date",
+    "score": "Score",
+    "level": "Level",
+    "more": "More than",
+    "less": "Less than",
+    "up": "Up",
+    "low": "Lower",
+    "invetor-type": "Investor type ",
+    "deposit": "Deposit and Short term fixed income ",
+    "gov-bond": "Government bond ",
+    "pri": "Private Debt instruments / corporate bond ",
+    "alter": "Alternative investment **",
+    "equity": "equity instruments",
+    "fund-risk": "Fund risk level",
+    "acc-risk": "Accept, Foreign exchange risk",
+    "unit-balance1": "Unit Price"
+
     
+  },
+  "Validation": {
+    "required": "Please fill the information.",
+    "incorrect": "Incorrect information.",
+    "username": "At least 8 characters which contain one numeric digit.",
+    "password": "At least 8 characters which contain one numeric digit, one special character, one uppercase and one lowercase letter.",
+    "samepassword": "Passwords do not match."
+  },
+  "Modal": {
+    "notifications": "Notifications",
+    "delete": "Do you want to delete the selected order"
   },
   "LOGIN":{
     "username": "Username",
@@ -148,12 +246,14 @@
     "otp": "OTP Security",
     "otp-send": "The OTP will be sent to the mobile number.",
     "otp-receive": "Specify the OTP code received.",
-    "otp-request": "Please press 'Request OTP' to get security code.",
+    "otp-request": "Please press '",
+    "otp-request2": "' to get security code.",
     "prefix": "Title",
     "firstname": "Firstname",
     "lastname": "Lastname",
     "tel": "Phone Number",
     "register1": "Register",
+    "sent-mail": "The system will send new password details via e-mail. If not receiving a confirmation email Please check your junk mail (Junk Mail, Spam).",
     "register2": "Set username and password"
   },
   "BUTTON":{
@@ -172,6 +272,9 @@
     "edit": "Edit data",
     "cal": "Calculate",
     "restore": "Restore",
+    "delete": "Delete Order",
+    "suittest": "Do Suitability",
     "acceptrisk": "Accept Risk"
+    
   }
 }
