--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -12,8 +12,8 @@
     "content1": "ต้องการสอบถามข้อมูล",
     "content2": "ฝ่ายการตลาด",
     "content3": "บลจ.แลนด์ แอนด์ เฮาส์ จำกัด",
-    "content4": "Tel. 02-286-3484,02-2679-2155",
-    "content5": "หรือ E-mail : marketing@lhfund.co.th"
+    "content4": "Tel. 02-286-3484",
+    "content5": "หรือ E-mail : "
   },
   "NAVBAR": {
     "dashboard": "หน้ารวม Port",
@@ -50,16 +50,58 @@
     "address": "ที่อยู่",
     "no-list": "ไม่มีรายการที่รอดำเนินงาน",
     "effectivedate": "วันที่รายการมีผล",
+    "select": "กรุณาเลือก",
+    "select-p": "กรุณาเลือกจังหวัด",
+    "select-a": "กรุณาเลือกอำเภอ",
+    "select-t": "กรุณาเลือกตำบล",
+    "not-ad-date": "หากไม่ต้องการกำหนดวันซื้อหน่วยลงทุนล่วงหน้า ไม่ต้องระบุ",
+    "place-holder-date": "วว/ดด/ปปปป",
+    "all-fund": "แสดงทุกกองทุน",
+    "all-unitholder": "แสดงทุกบัญชีผู้ถือหน่วย",
+    "ats": "ไม่พบบัญชีธนาคาร",
+    "duration": "ระยะเวลา",
+    "SUB": "รายการซื้อ",
+    "RDM": "รายการขาย",
+    "SWI": "รายการสับเปลี่ยนเข้า",
+    "SWO": "รายการสับเปลี่ยนออก",
+    "TRI": "รายการรับโอน",
+    "TRO": "รายการโอนออก",
+    "LHF": "รายการผ่าน LH FUND",
+    "LHF-I": "รายการผ่าน Internet LH FUND",
+    "FUNDCONNECT": "รายการผ่าน Fund Connext",
+    "SELLINGAGENT": "รายการผ่าน Selling Agent",
+    "prospectus": "ดาวน์โหลดหนังสือชี้ชวน",
+    "be-confirm": "ตรวจสอบรายละเอียดก่อนกดยืนยัน",
+    "be-print": "พิมพ์ใบยืนยันการทำรายการนี้เก็บไว้",
+    "example": "ตัวอย่าง",
+    "score": "คะแนนที่คำนวณได้",
+    "score-result": "ผลการประเมินความเสี่ยงในการลงทุน",
+    "texs": "หัก",
+    "not-texs": "ไม่หัก",
+    "phone-edit": "เบอร์โทรศัพท์มือถือและอีเมล์ ที่ใช้ในการสมัครลงทะเบียนไม่สามารถแก้ไขจากหน้าเว็บไซต์ได้โปรดติดต่อเจ้าหน้าที่การตลาดที่ดูแลท่าน",   
+    "abbreviation": "คำย่อ",
+    "tran-way": "ช่องทางการทำรายการ",
+    "tran-type": "ประเภทการทำรายการ", 
+    "hed": "กองทุนที่ท่านเลือกไม่มีนโยบายป้องกันความเสี่ยงอัตราแลกเปลี่ยนเต็มจำนวน",
+    "risk-level": "ระดับความเสี่ยงในการลงทุนของท่านน้อยกว่าระดับความเสี่ยงของกองทุน",
+    "expiremodal": "แบบประเมินความเสี่ยงของท่านครบกำหนดแล้ว กรุณาปรับปรุงแบบประเมินความเสี่ยง เพื่อให้สามารถทำรายการซื้อ หรือ รายการสับเปลี่ยนเข้าด้วยค่ะ",
+    "warn-order": "การยืนยันรายการนี้ยังไม่ถือว่ารายสั่งซื้อหน่วยลงทุนสมบูรณ์ ในกรณีที่ท่านยังมิได้ขอออกสมุดบัญชีแสดงสิทธิในหน่วยลงทุน นายทะเบียนจะจัดส่งหนังสือรับรองสิทธิในหน่วยลงทุนให้แก่ท่านเมื่อรายการนี้ได้ทำเสร็จสมบูรณ์ ภายใน 2 วันทำการ",
+    "ats-contact": "ติดต่อเจ้าหน้าที่การตลาด เบอร์ติดต่อ 02-286-3484 หรือ 02-679-2155 เพื่อดำเนินขอเปิดบัญชี ATS",
     "//myport": null,    
     "net-asset-value": "มูลค่าทรัพย์สินสุทธิ (บาท)",
     "profit-loss": "กำไร/ขาดทุน (บาท)",    
     "asset-alloction": "สัดส่วนเงินลงทุน",
-    "//transection": null,    
+    "//transection": null,
+    "payment-method": "หักบัญชีธนาคาร",
+    "bath": "บาท",
+    "unit": "หน่วย",
+    "all": "ทั้งหมด",
     "purchase": "ซื้อหน่วยลงทุน",
     "input-date": "วันที่ทำรายการ",
     "payment": "เลือกวิธีชำระเงิน",
     "fund-name": "กองทุน",
     "amount": "จำนวน",
+    "amount2": "จำนวน",
     "debit-from-acc": "หักบัญชีธนาคาร",
     "Advance-s-date": "วันที่ทำรายการซื้อล่วงหน้า",
     "sub-order": "รายการซื้อหน่วยลงทุน",
@@ -96,6 +138,7 @@
     "select-date-t": "เลือกวันที่ต้องการยืนยันการทำรายการ",
     "transaction-date": "วันที่ทำรายการ",
     "//profile": null,
+    "address-edit": "ที่อยู่ที่ติดต่อ",
     "defult-start-page": "เลือกหน้าแรกที่แสดง",
     "current-p": "รหัสผ่านปัจจุบัน",
     "new-p": "รหัสผ่านใหม่",
@@ -112,7 +155,7 @@
     "province": "จังหวัด",
     "post-code": "รหัสไปรษณีย์",
     "country": "ประเทศ",
-    "m-phone": "เบอร์โทรศัพท์ ที่ติดต่อ",
+    "m-phone": "เบอร์โทรศัพท์ที่ติดต่อเพิ่มเติม",
     "w-phone": "เบอร์โทรศัพท์ ที่ทำงาน",
     "f-num": "เบอร์โทรสาร",
     "tax": "หักภาษี ณ ที่จ่าย",
@@ -127,13 +170,67 @@
     "day": "วันที่",
     "start-date": "ระยะเวลาเริ่มต้น",
     "end-date": "ระยะเวลาสิ้นสุด",
-    "regular-purchase-list": "รายการซื้อหน่วยลงทุนแบบประจำ"
+    "regular-purchase-list": "รายการซื้อหน่วยลงทุนแบบประจำ",
+    "every-day": "ทุกๆ วันที่"
 
   },
   "TABLE": {
     "date": "คงเหลือ ณ วันที่",
     "unit-balance": "หน่วยคงเหลือ",
-    "nav-unit": "มูลค่าต่อหน่วย"
+    "nav-unit": "มูลค่าต่อหน่วย",
+    "balance-amount": "มูลค่ารวม",
+    "unrealize": "กำไรขาดทุน",
+    "bath": "(บาท)",
+    "cost": "ต้นทุน",
+    "unit": "(หน่วย)",
+    "unit2": "จำนวนหน่วย",
+    "balance": "ยอดคงเหลือ",
+    "total": "รวม",
+    "ef-date": "วันที่มีผล",
+    "or-date": "วันที่ทำรายการ",
+    "or-date-time": "วันและเวลาที่ทำรายการ",
+    "fund": "กองทุน",
+    "payment-method": "วิธีชำระเงิน",
+    "first-date": "วันที่ซื้อ",
+    "type": "ประเภท",
+    "transaction": "รายการ",
+    "des-fund": "กองทุนปลายทาง",
+    "xd-date": "วันที่ XD",
+    "ref": "เลขที่อ้างอิง",
+    "type-in": "ประเภทหน่วยลงทุน",
+    "invest": "มูลค่าการลงทุน",
+    "dividend-unit": "เงินปันผล/หน่วย",
+    "dividend-pay": "มูลค่าเงินปันผล",
+    "with-taxes": "ภาษีหัก ณ ที่จ่าย",
+    "with-taxes-a": "มูลค่าที่หักภาษี",
+    "net-dividend": "เงินปันผลรับสุทธิ",
+    "dividend-date": "วันจ่ายเงินปันผล",
+    "score": "คะแนน",
+    "level": "ระดับ",
+    "more": "มากกว่า",
+    "less": "น้อยกว่า",
+    "up": "ขึ้นไป",
+    "low": "ต่ำกว่า",
+    "invetor-type": "ประเภทนักลงทุน",
+    "deposit": "เงินฝากและ ตราสารหนี้ระยะสั้น",
+    "gov-bond": "ตราสารหนี้ภาครัฐ ที่มีอายุมากกว่า1ปี",
+    "pri": "ตราสารหนี้ ภาคเอกชน",
+    "alter": "การลงทุน ทางเลือก**",
+    "equity": "ตราสารทุน",
+    "fund-risk": "ระดับความเสี่ยงของกองทุน",
+    "acc-risk": "รับความเสี่ยงเรื่องอัตราแลกเปลี่ยน",
+    "unit-balance1": "มูลค่าหน่วย"
+  },
+  "Validation": {
+    "required": "กรุณากรอกข้อมูลให้ครบถ้วน",
+    "incorrect": "ข้อมูลไม่ถูกต้อง",
+    "username": "อย่างน้อย 8 ตัวอักษร รวมทั้งตัวเลข",
+    "password": "รหัสผ่านอย่างน้อย 8 ตัวอักษร ต้องประกอบด้วยข้อมูลต่อไปนี้ ตัวพิมพ์เล็ก พิมพ์ใหญ่ อักษระพิเศษ รวมทั้งตัวเลข ",
+    "samepassword": "รหัสผ่านไม่ตรงกัน"
+  },
+  "Modal": {
+    "notifications": "แจ้งเตือน",
+    "delete": "คุณต้องการลบรายการที่เลือกหรือไม่"
   },
   "LOGIN":{
     "username": "ชื่อผู้เข้าระบบ",
@@ -148,12 +245,14 @@
     "otp": "ระบบความปลอดภัย OTP",
     "otp-send": "ระบบจะส่งรหัส OTP ไปยังเบอร์โทรศัพท์มือถือ",
     "otp-receive": "ระบุรหัส OTP ที่ได้รับ",
-    "otp-request": "กรุณากดปุ่ม 'Request OTP' เพื่อรับรหัสรักษาความปลอดภัย",
+    "otp-request": "กรุณากดปุ่ม '",
+    "otp-request2": "' เพื่อรับรหัสรักษาความปลอดภัย",
     "prefix": "คำนำหน้า",
     "firstname": "ชื่อ",
     "lastname": "นามสกุล",
     "tel": "เบอร์โทรศัพท์มือถือ",
     "register1": "ลงทะเบียนเข้าใช้ระบบ",
+    "sent-mail": "ระบบจะส่งอีเมลรายละเอียดการตั้งหรัสผ่านใหม่ หากไม่ได้รับอีเมลยืนยัน กรุณาตรวจสอบที่ เมลขยะ (Junk Mail, Spam) ของคุณค่ะ",
     "register2": "ตั้งค่าชื่อผู้ใช้เข้าระบบและรหัสผ่าน"
   },
   "BUTTON":{
@@ -172,11 +271,8 @@
     "edit": "แก้ไขข้อมูล",
     "cal": "คำนวณ",
     "restore": "คืนค่า",
+    "delete": "ลบรายการนี้",
+    "suittest": "ทำแบบประเมิน",
     "acceptrisk": "ยอมรับความเสี่ยง"
-  },
-  "abbreviation": {
-    "date": "วันที่",
-    "unit-balance": "หน่วยคงเหลือ",
-    "nav-unit": "มูลค่าต่อหน่วย"
   }
 }
