--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -42,6 +42,7 @@
   },
   "CONTENT": {    
     "//all": null,
+    "not-found": "ไม่พบรายการดังกล่าว",
     "unit-holder-num": "เลขที่ผู้ถือหน่วยลงทุน",
     "unit-holder-name": "ชื่อผู้ถือหน่วยลงทุน",
     "report-date": "วันที่ออกรายงาน",
@@ -230,6 +231,8 @@
   },
   "Modal": {
     "notifications": "แจ้งเตือน",
+    "succ": "ทำรายการสำเร็จ",
+    "delete-or": "ลบรายการสำเร็จ",
     "delete": "คุณต้องการลบรายการที่เลือกหรือไม่"
   },
   "LOGIN":{
