--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -88,6 +88,7 @@
     "expiremodal": "แบบประเมินความเสี่ยงของท่านครบกำหนดแล้ว กรุณาปรับปรุงแบบประเมินความเสี่ยง เพื่อให้สามารถทำรายการซื้อ หรือ รายการสับเปลี่ยนเข้าด้วยค่ะ",
     "warn-order": "การยืนยันรายการนี้ยังไม่ถือว่ารายสั่งซื้อหน่วยลงทุนสมบูรณ์ ในกรณีที่ท่านยังมิได้ขอออกสมุดบัญชีแสดงสิทธิในหน่วยลงทุน นายทะเบียนจะจัดส่งหนังสือรับรองสิทธิในหน่วยลงทุนให้แก่ท่านเมื่อรายการนี้ได้ทำเสร็จสมบูรณ์ ภายใน 2 วันทำการ",
     "ats-contact": "ติดต่อเจ้าหน้าที่การตลาด เบอร์ติดต่อ 02-286-3484 หรือ 02-679-2155 เพื่อดำเนินขอเปิดบัญชี ATS",
+    "lesszero": "กรุณากรอกจำนวนมากกว่า 0",
     "//myport": null,    
     "net-asset-value": "มูลค่าทรัพย์สินสุทธิ (บาท)",
     "profit-loss": "กำไร/ขาดทุน (บาท)",    
@@ -130,6 +131,7 @@
     "l-i-cer": "หนังสือรับรองซื้อหน่วยลงทุน LTF",
     "l-r-cer": "หนังสือรับรองฯ ขายคืน LTF",
     "year": "ปี",
+    "year2": "ปี พ.ศ.",
     "//report": null,
     "select-date-fund": "กรุณาเลือกกองทุนและวันที่ต้องการดูรายการ",
     "fund-group": "กลุ่มกองทุน",
@@ -232,8 +234,11 @@
   "Modal": {
     "notifications": "แจ้งเตือน",
     "succ": "ทำรายการสำเร็จ",
-    "delete-or": "ลบรายการสำเร็จ",
-    "delete": "คุณต้องการลบรายการที่เลือกหรือไม่"
+    "delete-or": "ยกเลิกรายการสำเร็จ",
+    "delete": "คุณต้องการยกเลิกรายการที่เลือกหรือไม่",
+    "not-or": "ยอดคงเหลือไม่สามารถการทำรายการได้",
+    "not-ats": "ไม่สามารถทำรายการแบบประจำได้ โปรดติดต่อเจ้าหน้าที่การตลาดเพื่่อกำหนดบัญชีชำระค่าซื้อ (ATS)",
+    "lastupdate": "กรุณาติดต่อเจ้าหน้าที่การตลาดเพื่อปรับปรุงข้อมูลส่วนบุคคล"
   },
   "LOGIN":{
     "username": "ชื่อผู้เข้าระบบ",
@@ -274,7 +279,7 @@
     "edit": "แก้ไขข้อมูล",
     "cal": "คำนวณ",
     "restore": "คืนค่า",
-    "delete": "ลบรายการนี้",
+    "delete": "ยกเลิกรายการนี้",
     "suittest": "ทำแบบประเมิน",
     "acceptrisk": "ยอมรับความเสี่ยง"
   }
